@@ -1,5 +1,5 @@
 .\" Man page generated from reStructeredText.
-.TH clubak 1 "2010-05-25" "1.3" "ClusterShell User Manual"
+.TH clubak 1 "2010-07-06" "1.3" "ClusterShell User Manual"
 .SH NAME
 clubak \- format output from clush/pdsh-like output
 
@@ -41,7 +41,8 @@ provides additonal features. For instance, \fBclubak\fP always displays
 its results sorted by node/nodeset.
 
 You do not need to use \fBclubak\fP when using \fBclush\fP(1) as all output
-formatting features are already included in.
+formatting features are already included in. It is provided for other usages,
+like post\-processing results of the form "\fInode:output\fP".
 
 Like \fBclush\fP(1), \fBclubak\fP uses the \fIClusterShell.MsgTree\fP module of the
 ClusterShell library (see \fBpydoc ClusterShell.MsgTree\fP).
@@ -93,6 +94,11 @@ do not display group source prefix (always \fI@groupname\fP)
 .TP
 .BI \-S\  SEPARATOR ,\ \-\-separator\fn= SEPARATOR
 node / line content separator string (default: \fI:\fP)
+
+
+.TP
+.BI \-\-color\fn= WHENCOLOR
+whether to use ANSI colors to surround node or nodeset prefix/header with escape sequences to display them in color on the terminal. \fIWHENCOLOR\fP is \fBnever\fP, \fBalways\fP or \fBauto\fP (which use color if standard output refers to a terminal). Color is set to [34m (blue foreground text) and cannot be modified.
 
 .UNINDENT
 
@@ -163,5 +169,5 @@ Stephane Thiell, CEA DAM  <stephane.thiell@cea.fr>
 .SH COPYRIGHT
 CeCILL-C V1
 
-.\" Generated by docutils manpage writer on 2010-05-25 10:43.
+.\" Generated by docutils manpage writer on 2010-07-06 23:45.
 .\" 
